// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`prestodb query dimensions with underscore filter: dimensions 1`] = `
Array [
  Object {
    "Orders.status": "cancelled_by_customer",
  },
]
`;

exports[`prestodb query dimensions: dimensions 1`] = `
Array [
  Object {
    "Orders.status": "processed",
    "Orders.totalAmount": "800",
  },
  Object {
    "Orders.status": "cancelled_by_customer",
    "Orders.totalAmount": "700",
  },
  Object {
    "Orders.status": "shipped",
    "Orders.totalAmount": "600",
  },
  Object {
    "Orders.status": "new",
    "Orders.totalAmount": "300",
  },
]
`;

exports[`prestodb query measure grouped by time dimension with timezone: measure-group-by 1`] = `
Array [
  Object {
    "Orders.createdAt": "2022-12-05T08:00:00.000",
    "Orders.createdAt.hour": "2022-12-05T08:00:00.000",
    "Orders.totalAmount": 300,
  },
  Object {
    "Orders.createdAt": "2022-12-05T10:00:00.000",
    "Orders.createdAt.hour": "2022-12-05T10:00:00.000",
    "Orders.totalAmount": 300,
  },
  Object {
    "Orders.createdAt": "2022-12-05T11:00:00.000",
    "Orders.createdAt.hour": "2022-12-05T11:00:00.000",
    "Orders.totalAmount": 500,
  },
  Object {
    "Orders.createdAt": "2022-12-05T12:00:00.000",
    "Orders.createdAt.hour": "2022-12-05T12:00:00.000",
    "Orders.totalAmount": 600,
  },
  Object {
    "Orders.createdAt": "2022-12-05T13:00:00.000",
    "Orders.createdAt.hour": "2022-12-05T13:00:00.000",
    "Orders.totalAmount": 700,
  },
]
`;

exports[`prestodb query measure: query 1`] = `
Array [
  Object {
    "Orders.totalAmount": "2400",
  },
]
`;
